--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>Python Beach</title>
-	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+	<link rel="stylesheet" href="{% static 'css/pure-min.css' %}">
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -14,15 +14,17 @@
 			<h1>Python Beach 3.0</h1>
 			<h2>Faça sua inscrição!</h2>
 		</header>
-		<form action="." method="post" class="pure-form">
-			{% csrf_token %}
-			<fieldset class="pure-group">
-				{% for field in form %}
-					{{ field }}
-				{% endfor %}
-			</fieldset>
-		<button class="pure-button pure-input-1-2 pure-button-primary" type="submit">Inscreva-se</button>
-		</form>
+		<div id="formulario">
+			<form action="." method="post" class="pure-form">
+				{% csrf_token %}
+				<fieldset class="pure-group">
+					{% for field in form %}
+						{{ field }}
+					{% endfor %}
+				</fieldset>
+			<button class="pure-button pure-input-1-2 pure-button-primary" type="submit">Inscreva-se</button>
+			</form>
+		</div>
 	</div>
 </div>
 </body>
