--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
 				<fieldset class="pure-group">
 					{% for field in form %}
 						{{ field }}
+						{{ field.errors}}
 					{% endfor %}
 				</fieldset>
 			<button class="pure-button pure-input-1-2 pure-button-primary" type="submit">Inscreva-se</button>
