--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,12 @@
 						{{ field.errors}}
 					{% endfor %}
 				</fieldset>
-			<button class="pure-button pure-input-1-2 pure-button-primary" type="submit">Inscreva-se</button>
+			<button class="pure-button pure-button-primary" type="submit">Inscreva-se</button>
 			</form>
+			<div id="line">
+				<h5>Powered by:</h5>
+				<p><img src="{% static 'img/logo.png' %}" alt=""></p>
+			</div>
 		</div>
 	</div>
 </div>
