Separated CSS payment page

--- a/templates/payment.html
+++ b/templates/payment.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Python Beach</title>
 	<link rel="stylesheet" href="{% static 'css/pure-min.css' %}">
-	<link rel="stylesheet" href="{% static 'css/style.css' %}">
+	<link rel="stylesheet" href="{% static 'css/payment.css' %}">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
@@ -78,7 +78,7 @@
 			</li>
 			<li>
 				<a href="http://www.indacode.com">
-					<img src="{% static 'img/logo_indacode.jpg' %}" alt="Indacode">
+					<img src="{% static 'img/logo_indacode.png' %}" alt="Indacode">
 				</a>
 			</li>
 		</ul>
