Added infos about local of payment

--- a/templates/payment.html
+++ b/templates/payment.html
@@ -40,7 +40,7 @@
 			</li>
 			<li>
 				<p>
-					<span>Local do pagamento</span>: Faculdade Maurício de Nassau
+					<span>Local do pagamento</span>: Faculdade Maurício de Nassau - Campus Parnaíba.
 				</p>
 			</li>
 			<li>
@@ -50,8 +50,10 @@
 			</li>
 		</ul>
 		<p>
-		Ao realizar o pagamento, guarde consigo o comprovante contendo a assinatura da coordenação (<em>logo abaixo</em>), que comprova o seu pagamento.
-			Você terá direito a receber um certificado de 20h, expedido pela Faculdade Maurício de Nassau. 
+		O pagamento deve ser realizado na Faculdade Maurício de Nassau. Procurar o coordenador do curso de Sistemas de Informação, Rodrigo Baluz. 
+		</p>
+		<p>
+			Guarde consigo o comprovante contendo a assinatura da coordenação (<em>logo abaixo</em>), que comprova o seu pagamento. Você terá direito a receber um certificado de 20h, expedido pela Faculdade Maurício de Nassau.
 		</p>
 		<div id="signature">
 			<div class="assign">
