--- a/templates/payment.html
+++ b/templates/payment.html
@@ -69,6 +69,9 @@
 		<p>
 			Para mais informações, entre em <a href="mailto:pmazulo@gmail.com">contato</a>.
 		</p>
+		<p>
+			<a href="{% url 'core:index' %}">Página inicial</a>.
+		</p>
 	</div>
 	<div id="sponsors">
 		<h2>Realização</h2>
