--- a/templates/recovery_by_email.html
+++ b/templates/recovery_by_email.html
@@ -11,8 +11,7 @@
 <div id="wrapper">
 	<div id="content">
 		<header id="header">
-			<h1>Python Beach 3.0</h1>
-			<h2>Faça sua inscrição!</h2>
+			<h1>Recupere seu boleto</h1>
 		</header>
 		<div id="formulario">
 			<form action="." method="post" class="pure-form">
@@ -23,8 +22,7 @@
 						{{ field.errors}}
 					{% endfor %}
 				</fieldset>
-			<button class="pure-button pure-button-primary" type="submit">Inscreva-se</button>
-			<a id="recovery_by_email" href="{% url 'core:recovery' %}">Perdeu o Boleto? Recupere-o!</a>
+			<button class="pure-button pure-button-primary" type="submit">Enviar</button>
 			</form>
 			<div id="line">
 				<h5>Powered by:</h5>
